2010-12-29  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        [GTK] minimal build fails at link time due to missing sqlite3 symbols
        https://bugs.webkit.org/show_bug.cgi?id=51327

        * configure.ac: Error out if SQLite3 wasn't found while at least
        one of the features depending on it has been enabled.

WebCore:

        Reviewed by Martin Robinson.

        [GTK] minimal build fails at link time due to missing sqlite3 symbols
        https://bugs.webkit.org/show_bug.cgi?id=51327

        Guard the code calling sqlite3 with the ENABLE(DATABASE) check.

        No new tests, build fix only.

        * platform/sql/SQLiteAuthorizer.cpp:
        * platform/sql/SQLiteDatabase.cpp:
        * platform/sql/SQLiteFileSystem.cpp:
        * platform/sql/SQLiteStatement.cpp:
        * platform/sql/SQLiteTransaction.cpp:

Canonical link: https://commits.webkit.org/65131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74792 268f45cc-cd09-0410-ab3c-d52691b4dbfc