WebCore/platform/sql/SQLiteDatabase.cpp
@@ -27,6 +27,7 @@
 #include "config.h"
 #include "SQLiteDatabase.h"
 
+#if ENABLE(DATABASE)
 #include "DatabaseAuthorizer.h"
 #include "Logging.h"
 #include "SQLiteFileSystem.h"
@@ -471,3 +472,5 @@ bool SQLiteDatabase::turnOnIncrementalAutoVacuum()
 }
 
 } // namespace WebCore
+
+#endif // ENABLE(DATABASE)
