WebCore/platform/sql/SQLiteFileSystem.cpp
@@ -32,6 +32,8 @@
 #include "config.h"
 #include "SQLiteFileSystem.h"
 
+#if ENABLE(DATABASE)
+
 #include "FileSystem.h"
 #include "SQLiteDatabase.h"
 #include "SQLiteStatement.h"
@@ -123,3 +125,4 @@ long long SQLiteFileSystem::getDatabaseFileSize(const String& fileName)
 }
 
 } // namespace WebCore
+#endif // ENABLE(DATABASE)
