WebCore/platform/sql/SQLiteTransaction.cpp
@@ -26,6 +26,8 @@
 #include "config.h"
 #include "SQLiteTransaction.h"
 
+#if ENABLE(DATABASE)
+
 #include "SQLiteDatabase.h"
 
 namespace WebCore {
@@ -101,3 +103,4 @@ bool SQLiteTransaction::wasRolledBackBySqlite() const
 }
 
 } // namespace WebCore
+#endif // ENABLE(DATABASE)
